# AISight

./: CHANGELOG.md  README.md  ruff.toml
.github/workflows/: release.yml
animationsight/: README.md  pyproject.toml
animationsight/animationsight/: __init__.py  cli.py  metrics.py  render.py  report.py  skill_install.py
animationsight/skill/: SKILL.md
animationsight/tests/: test_animationsight.py
benchmarks/: README.md
docs/: roadmap-sights.md
docs/comparison/: README.md
docs/plugins/example/: pyproject.toml
docs/plugins/example/solidsight_example_plugin/: __init__.py
pcbsight/: README.md  pyproject.toml
pcbsight/pcbsight/: __init__.py  cli.py  report.py  skill_install.py
pcbsight/skill/: SKILL.md
pcbsight/tests/: conftest.py  test_pcbsight.py
shadersight/: README.md  pyproject.toml
shadersight/examples/: make_examples.py
shadersight/shadersight/: __init__.py  brdf.py  cli.py  errors.py  graph.py  render.py  report.py  skill_install.py
shadersight/skill/: SKILL.md
shadersight/tests/: test_shadersight.py
showcase/: README.md
showcase/asset/: make_faceplate.py
showcase/board/: make_board.py  vigia_board.kicad_pcb  vigia_board_v1.kicad_pcb
showcase/motion/: hop_fixed.bvh  hop_floaty.bvh  make_hop.py
showcase/robot/: model.py  motion_sweep.txt  params.py  robot_export.txt
skill/domains/: architecture.md  enclosures.md  furniture.md  mechanisms.md  organic.md  scientific.md  terrain.md
solidsight/: README.md  pyproject.toml
texturesight/: README.md  pyproject.toml
tool/: README.md  pyproject.toml
tool/solidsight/: bom.py  (+7 more)
(+100 files in other folders)
