[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solidsight-example-plugin"
version = "0.1.0"
description = "Example solidsight plugin: a validator and an exporter"
requires-python = ">=3.10"

[project.entry-points."solidsight.plugins"]
example = "solidsight_example_plugin:register"
